Fix domain content on mobile

--- a/client/signup/steps/domains/style.scss
+++ b/client/signup/steps/domains/style.scss
@@ -465,6 +465,13 @@ body.is-section-signup.is-white-signup {
 	.signup__step.is-mailbox-domain {
 		padding: 0 12px;
 	}
+	.step-container__content .domains__step-content-domain-step {
+		padding: 0 12px;
+		@include break-mobile {
+			padding: 0;
+		}
+
+	}
 }
 
 // blue signup flow-specific styles
